name:                try-HRR
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/ishiy1993/try-HRR#readme
license:             BSD3
license-file:        LICENSE
author:              ishiy
maintainer:          y.ishihara.1993@gmail.com
copyright:           Copyright: (c) 2016 ishiy
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DataSource
                     , Memo
                     , Query
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , relational-record
                     , relational-query
                     , relational-query-HDBC
                     , HDBC
                     , HDBC-postgresql
                     , HDBC-session
